Category for pixels complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ONEMB Wallpapers</string>
+    <string name="app_collection_key">"ONEMBCollection"</string>
+    <string name="app_wallpapers_key">"ONEMBWallpapersData"</string>
 </resources>
